syntax = "proto3";

package user;

option go_package = "github.com/sgrgug/ecommerce-ms";

service UserService {
    rpc CreateUser(CreateUserRequest) returns (CreateUserResponse);
    rpc GetUser(GetUserRequest) returns (GetUserResponse);
}

message User {
    int64 id = 1;
    string username = 2;
    string email = 3;
    string password = 4;
}

message CreateUserRequest {
    User user = 1;
}

message CreateUserResponse {
    User user = 1;
}

message GetUserRequest {
    int64 id = 1;
}

message GetUserResponse {
    User user = 1;
}